# IntroToComputerGraphics

./: .gitignore  BevGraf.sln  CMakeLists.txt
Homework_01/: CMakeLists.txt  Homework_01.vcxproj  main.cpp
Homework_02/: CMakeLists.txt  Homework_02.vcxproj  main.cpp
Homework_03/: CMakeLists.txt  Homework_03.vcxproj  main.cpp
Homework_04/: CMakeLists.txt  Homework_04.vcxproj  main.cpp
Homework_05/: CMakeLists.txt  Homework_05.vcxproj  Homework_05.vcxproj.filters  main.cpp
Homework_06/: CMakeLists.txt  Homework_06.vcxproj  main.cpp
Homework_07/: CMakeLists.txt  Homework_07.vcxproj  main.cpp
Homework_08/: CMakeLists.txt  Homework_08.vcxproj  main.cpp
Homework_09/: CMakeLists.txt  Homework_09.vcxproj  main.cpp
Homework_10/: CMakeLists.txt  Homework_10.vcxproj  main.cpp
OpenGL/: MoveLineSegment.cpp  OpenGL.vcxproj  OpenGL.vcxproj.filters  Source.cpp  dragdrop.cpp  main.cpp
Utils/: Bezier2D.h  Button.h  Circle.h  Color.h  Cube.h  Ellipse.h  Line.h  Matrix.h  Mesh.h  Point2D.h  Point3D.h  PolyStar.h  Polygon2D.h  Rectangle.h  Slider.h  Sphere.h  Torus.h  Utils.vcxproj  Utils.vcxproj.filters  Vector2D.h  Vector3D.h  functions.h
